crates/diman_unit_system/tests/compile_fail/type_mismatch_mul_quantity_type.stderr
error[E0271]: type mismatch resolving `<f64 as Mul<Quantity<f64, Dimension>>>::Output == ()`
 --> tests/compile_fail/type_mismatch_mul_quantity_type.rs:7:21
  |
7 |     let x: () = 1.0 * dimensionless.new(1.0);
  |                     ^ expected `()`, found `Quantity<f64, Dimension>`
  |
  = note: expected unit type `()`
                found struct `Quantity<f64, Dimension>`
